bad/assign_null_class.example_compiler_output
ERROR
[1mbad/assign_null_class.lat:6:7: [1;31merror: [0;1mleft side is not assignable[m
	null = new Y;
	     [1;32m^[m
[1mbad/assign_null_class.lat:6:2: [1;34mnote: [0;1mleft side starts here[m
	null = new Y;
	[1;32m^[m
